--- a/index.html
+++ b/index.html
@@ -14,37 +14,24 @@
     </header>
 
     <main>
-        <section id="eu">
+        <section class="conteudo">
             <h1> Quem sou eu? </h1>
-            <p> Me chamo Caio Vinicius, tenho 24 anos, moro em São Paulo na região do Grande ABC e atuo como Técnico de Enfermagem desde 2020, migrando aos poucos para a área de tecnologia. </p>
-            <img src="imagens/1516380212db261af019970abbacaae41ac8254dab.jpg" alt="Caio Vinicius" id="social">
-            <img src="imagens/IMG-20190117-WA0000.jpeg" alt="" id="estagio">
+            <p id="sobre"> Me chamo Caio Vinicius, nasci em 23/12/1998, Solteiro, de nacionalidade Brasileira; Trabalho na área da Saúde como Técnico de Enfermagem desde 2020, tendo passsagem por UTI's Adulto (Geral e Cardiológica) e Unidades de Internação Neurológica. Além disso, estudo para atuar também na área de tecnologia, cursando atualmente a Graduação em Análise de Desenvolvimento de Sistemas pela Universidade Anhembi Morumbi, me dedicando para aprender linguagens como: HTML5, CSS3, Java, JS e entre tantos outros. <strong> Sigo em constante evolução.</strong> </p>
         </section>
 
-        <section id="projetos">
+        <section class="conteudo">
             <h1>Meus Projetos</h1>
-            <div id="projeto1">
                 <p> Meu 1° projeto utilizando HTML e CSS responsivos para construção de um site modelo <a href="https://caioviniciustf.github.io/projeto-android/" target="_blank"> &#x1F517 HTML + CSS em um site modelo</a></p>
-            </div>
-            <div id="projeto2">
                 <p> Meu 2° projeto realizado feito inteiramente com HTML e CSS responsivos para multi-telas<a href="https://caioviniciustf.github.io/projeto-cordel/" target="_blank"> &#x1F517 HTML + CSS em um projeto com efeito Parallax </a></p>
-            </div>
-            <div>
                 <p> Mais quais estão por vir? &#x1F440</p>
-            </div>
-        </section>
-
-        <section id="contato">
-            <h1>Contato</h1>
-            <a href="https://www.facebook.com/caio.vini.161/" target="_blank"><img src="imagens/icone-facebook.png" alt="Ícone Facebook"></a>
-            <a href="https://github.com/caioviniciusTF" target="_blank"><img src="imagens/icone-github.png" alt="Ícone do Github"></a>
-            <a href="https://www.instagram.com/c.vini98/" target="_blank"><img src="imagens/icone-instagram.png" alt="Ícone do Instagram"></a>
-            <a href="https://www.linkedin.com/in/caio-vini121998/" target="_blank"><img src="imagens/icone-linkedin.png" alt="Ícone do Linkedin"></a>
         </section>
     </main>
 
     <footer>
-        <p>Developer By <abbr title="No caso, eu mesmo heh">Caio Vinicius</abbr></p>
+        <p>Developed by <abbr title="No caso, eu mesmo heh">Caio Vinicius</abbr>  <a href="https://www.facebook.com/caio.vini.161/" target="_blank"><img src="imagens/icone-facebook.png" alt="Ícone Facebook"></a>
+            <a href="https://github.com/caioviniciusTF" target="_blank"><img src="imagens/icone-github.png" alt="Ícone do Github"></a>
+            <a href="https://www.instagram.com/c.vini98/" target="_blank"><img src="imagens/icone-instagram.png" alt="Ícone do Instagram"></a>
+            <a href="https://www.linkedin.com/in/caio-vini121998/" target="_blank"><img src="imagens/icone-linkedin.png" alt="Ícone do Linkedin"></a></p>
     </footer>
 </body>
 </html>
